--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,273 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/darker"
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:text="@string/output"
+        android:background="@color/light"
+        android:gravity="end | bottom"
+        android:padding="20dp"
+        android:textSize="40sp"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="horizontal"
+        android:paddingHorizontal="5dp"
+        android:layout_weight="1"
+        >
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnSeven"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:cornerRadius="5dp"
+            android:text="@string/_7"
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/dark"
+            android:textSize="32sp"
+            android:textColor="@color/white"
+            android:onClick="onDigit"
+            />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnEight"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:cornerRadius="5dp"
+            android:text="@string/_8"
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/dark"
+            android:textSize="32sp"
+            android:textColor="@color/white"
+            android:onClick="onDigit"
+            />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnNine"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:cornerRadius="5dp"
+            android:text="@string/_9"
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/dark"
+            android:textSize="32sp"
+            android:textColor="@color/white"
+            android:onClick="onDigit"
+            />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnDivide"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:cornerRadius="5dp"
+            android:text="@string/_Divide"
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/dark"
+            android:textSize="32sp"
+            android:textColor="@color/white"
+            android:onClick="onDigit"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingHorizontal="5dp"
+        android:layout_weight="1"
+        >
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnFour"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:cornerRadius="5dp"
+            android:text="@string/_4"
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/dark"
+            android:textSize="32sp"
+            android:textColor="@color/white"
+            android:onClick="onDigit"
+            />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnFive"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:cornerRadius="5dp"
+            android:text="@string/_5"
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/dark"
+            android:textSize="32sp"
+            android:textColor="@color/white"
+            android:onClick="onDigit"
+            />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnSix"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:cornerRadius="5dp"
+            android:text="@string/_6"
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/dark"
+            android:textSize="32sp"
+            android:textColor="@color/white"
+            android:onClick="onDigit"
+            />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnMultiply"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:cornerRadius="5dp"
+            android:text="@string/x"
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/dark"
+            android:textSize="32sp"
+            android:textColor="@color/white"
+            android:onClick="onDigit"
+            />
+    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingHorizontal="5dp"
+        android:layout_weight="1"
+        >
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnOne"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:cornerRadius="5dp"
+            android:text="@string/_1"
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/dark"
+            android:textSize="32sp"
+            android:textColor="@color/white"
+            android:onClick="onDigit"
+            />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnTwo"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:cornerRadius="5dp"
+            android:text="@string/_2"
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/dark"
+            android:textSize="32sp"
+            android:textColor="@color/white"
+            android:onClick="onDigit"
+            />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnThree"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:cornerRadius="5dp"
+            android:text="@string/_3"
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/dark"
+            android:textSize="32sp"
+            android:textColor="@color/white"
+            android:onClick="onDigit"
+            />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnSubtract"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:cornerRadius="5dp"
+            android:text="@string/minus"
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/dark"
+            android:textSize="32sp"
+            android:textColor="@color/white"
+            android:onClick="onDigit"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingHorizontal="5dp"
+        android:layout_weight="1"
+        >
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnZero"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            app:cornerRadius="5dp"
+            android:text="@string/_0"
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/dark"
+            android:textSize="32sp"
+            android:textColor="@color/white"
+            android:onClick="onDigit"
+            />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnClr"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:cornerRadius="5dp"
+            android:text="@string/clr"
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/dark"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:onClick="onDigit"
+            />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnAdd"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:cornerRadius="5dp"
+            android:text="@string/plus"
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/dark"
+            android:textSize="32sp"
+            android:textColor="@color/white"
+            android:onClick="onDigit"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingHorizontal="5dp"
+        android:layout_weight="1"
+        >
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnEquals"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:cornerRadius="5dp"
+            android:text="@string/equals"
+            android:layout_margin="5dp"
+            android:backgroundTint="@color/dark"
+            android:textSize="32sp"
+            android:textColor="@color/white"
+            android:onClick="onDigit"
+            />
+
+    </LinearLayout>
+
+
+</LinearLayout>
