--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,16 +8,37 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/tvOutput"
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4"
-        android:background="@color/light"
-        android:gravity="end | bottom"
-        android:padding="20dp"
-        android:textColor="@color/darkest"
-        android:textSize="62sp" />
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/tvInput"
+            android:layout_width="match_parent"
+            android:text="56+76"
+            android:layout_height="0dp"
+            android:layout_weight="8"
+            android:background="@color/light"
+            android:gravity="bottom | end"
+            android:paddingRight="10dp"
+            android:textColor="@color/darkest"
+            android:textSize="64sp" />
+        <TextView
+            android:id="@+id/tvOutput"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:text="6767"
+            android:layout_weight="2"
+            android:paddingEnd="10dp"
+            android:gravity="bottom | end"
+            android:background="@color/light"
+            android:textColor="@color/darker"
+            android:textSize="56sp" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -70,6 +91,7 @@
                 android:onClick="onBackspace"
                 app:icon="@drawable/baseline_backspace_24"
                 app:iconSize="32dp"
+                app:iconTint="@color/light"
                 app:iconGravity="textStart"
                 android:textColor="@color/white"
                 android:textSize="32sp"
